# PCD-works

./: .gitignore  CMakeLists.txt  README.md  _CMakeLists.txt  main.cpp
headers/: FiniteStateAutomaton.h  State.h  Transition.h  TransitionTable.h  utils.h
src/: FiniteStateAutomaton.cpp  State.cpp  Transition.cpp  TransitionTable.cpp  utils.cpp
